<resources>
    <string name="app_name">Electoral College Calculator</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password_fmt">Passwords must contain at least %1$d characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_user">New User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pw_reset_snack_msg">We\'ll send a reset message if you have an account</string>
    <string name="pw_reset_fail_msg">We were unable to send a reset message.</string>
    <string name="dismiss">OK</string>
    <string name="new_user_enter_email">Please enter a valid email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_out">Log Out</string>
    <string name="revoke_google">Revoke Google Access</string>
    <string name="revocation_failure">Unable to revoke, are you signed in with Google?</string>
    <string name="revocation_success">Google access to this application has been revoked.</string>
    <string name="progress_text">One moment please@#8230;</string>
    <string name="user_creation_success">Your account was created</string>
    <string name="user_creation_failed">Sorry, we could not create an account</string>
    <string name="revoking">Revoking Google access@#8230</string>
    <string name="unable_google">Sorry, we were unable to log on using Google</string>
    <string name="wait_for_login">Logging you in, this could take a minute</string>
    <string name="logout_now_question">Do you wish to Log Out?</string>
    <string name="logout_alert_title">A question for you</string>
    <string name="seal_desc">The Great Seal of The President of the United States</string>

    <!-- Election Grid strings -->
    <string name="grid_title">Election Detail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_election_gird">ElectionGird</string>
    <string name="title_activity_election_grid">ElectionGrid</string>
    <string name="title_activity_elections_view">ElectionsView</string>
    <string name="title_activity_linear_layout_grid">LinearLayoutGrid</string>
    <string name="title_activity_grid_layout_test">GridLayoutTest</string>
    <string name="btn_save_text">Save</string>
    <string name="txt_split">Split</string>
    <string name="democratic">Democratic: </string>
    <string name="republican">Republican: </string>
    <string name="too_many_votes" formated="false">Please enter a total of %d votes</string>
    <string name="split_dlg_title" formated="false">%1$s has %2$d votes</string>
    <string name="split_vote_title">Enter Votes</string>
    <string name="saving_election">Saving election@#8230</string>
    <string name="election_saved">Election Saved</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="election_path_format" translatable="false">users/%s/elections/%s</string>
    <string name="overwrite_title_format">Overwrite %s ?</string>
    <string name="yes">Yes</string>
    <string name="database_error">This save attempt failed due to a database error</string>
    <string name="no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="save_votes">Save Votes</string>
    <string name="valid_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890- .:_+</string>
    <string name="title">Title</string>
    <string name="locked_dlg_title">This historic election is locked, please save with a different name.</string>
    <string name="dirty_warning">Do you wish to save your changes?</string>
    <string name="year_select">Select a year for this election</string>



    <!-- MainActivity strings -->
    <string name="choose_year_title">Choose an election year</string>
    <string name="confirm_delete_format">Are you sure you wish to delete %s ?</string>
    <string name="delete_dlg_title">Please confirm deletion</string>
    <string name="ad_unit_id" translatable="false">/6499/example/interstitial</string>
    <string name="show_history">Historical Data</string>
    <string name="header_text">Available Elections</string>
    <string name="delete_icon_content_desc">Tap to delete this saved election</string>

    <!-- Historic Election Strings -->
    <string name="history_path" translatable="false">/History/PastElections</string>
    <string name="title_activity_election_history">Election History</string>
    <string name="wiki_url" translatable="false">https://en.wikipedia.org/wiki/United_States_presidential_election,_</string>
    <string name="no_network">The internet seems to be down right now, please try again latter</string>
    <string name="history_header">Tap an election for more information</string>
    <string name="democratic_total">Democratic Total: </string>
    <string name="republican_total">Republican Total: </string>

    <!-- Election Widget -->
    <string name="days_to_go_format">%1$s days until the Election</string>


</resources>
