<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content" android:layout_height="wrap_content">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/split_vote_title"
        android:id="@+id/dlgTitle"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dem_line"
        android:layout_below="@id/dlgTitle"
        android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/democratic"
        android:id="@+id/dem_txt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dem_votes"
            android:layout_toEndOf="@+id/dem_txt"
            android:maxLength="2"
            android:inputType="number"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rep_line"
        android:layout_below="@+id/dem_line">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/republican"
            android:id="@+id/rep_txt"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rep_votes"
            android:layout_toEndOf="@+id/rep_txt"
            android:maxLength="2"
            android:inputType="number"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_line"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/dlg_cancel"
            android:layout_marginStart="30dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_votes"
            android:id="@+id/dlg_ok"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>


</RelativeLayout>