<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/login_activity"
    tools:context="com.grayraven.electoralcalc.LoginActivity">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/primary_dark"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/primary_dark"
                    android:nextFocusUp="@id/email"
                    android:nextFocusDown="@+id/email_sign_in_button"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="start"
                    android:textColor="@color/primary_dark"
                    android:focusable="true"
                    android:nextFocusUp="@id/password"
                    android:nextFocusDown="@+id/new_user_button"
                    />


                <Space
                    android:layout_width="60dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/new_user_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/new_user"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:textColor="@color/primary_dark"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:focusable="true"
                    android:nextFocusUp="@id/email_sign_in_button"
                    android:nextFocusDown="@id/new_user_button"/>

            </LinearLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/pw_reset_btn"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="@dimen/notification_subtext_size"
                android:textColor="@color/primary_dark"
                android:focusable="true"
                android:nextFocusDown="@+id/login_with_google"
                android:nextFocusUp="@id/new_user_button"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="0sp"
                android:background="@color/colorLightGray"
                android:layout_marginBottom="0dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:focusable="true"
                android:nextFocusUp="@id/pw_reset_btn"
                android:nextFocusDown="@+id/btn_revoke_google"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoke_google"
                android:id="@+id/btn_revoke_google"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                android:visibility="visible"
                android:textSize="@dimen/notification_subtext_size"
                android:textColor="@color/primary_dark"
                android:focusable="true"
                android:nextFocusUp="@id/login_with_google"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
